--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "vue": "^2.6.6",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-router": "^3.0.2",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
