--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "v-animate-css": "0.0.3",
     "vue": "^2.6.6",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.2",
