--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "buefy": "^0.7.3",
     "v-animate-css": "0.0.3",
+    "vee-validate": "^2.1.7",
     "vue": "^2.6.6",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.2",
